@@ -15,6 +15,9 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
     directory
   - Fixed a broken symbolic link check
 
+  Drew Wells
+  - Modification to vdelivermail to properly handle Maildir paths that begin with "./"
+
 5.4.32 - Released 11-08-2010
   Matt Brookings
   - Updated maildirsize creation to set uid/gid on target
